--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@hello-pangea/dnd": "^17.0.0",
     "@supabase/supabase-js": "^2.39.7",
-    "react-router-dom": "^6.22.2",
-    "react-bootstrap": "^2.10.1",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@use-gesture/react": "^10.3.0",
     "bootstrap": "^5.3.3",
     "fabric": "^5.3.0",
-    "@use-gesture/react": "^10.3.0",
-    "zustand": "^4.5.2",
-    "react-icons": "^4.10.1"
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-bootstrap": "^2.10.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.22.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/fabric": "^5.3.7",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -36,7 +40,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
-    "@types/fabric": "^5.3.7"
+    "vite": "^5.4.2"
   }
 }
