--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@use-gesture/react": "^10.3.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.3.1",
     "fabric": "^5.3.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
