--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.22.2",
+    "uuid": "^11.0.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/fabric": "^5.3.7",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
